Fix for: WMS-8413 Mobile - When caption property text is more for checkbox, then text is getting overflowed

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -755,6 +755,10 @@ html, body {
   .caption {
     display: inline-block;
     height: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 100%;
   }
 }
 /****************************************Toggle classes******************************************/
